# scpi-server

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
etc/: yellow_pitaya_scpi.service
src/: acquire.rs  analog.rs  digital.rs  errors.rs  general.rs  generator.rs  ieee.rs  main.rs  scpi.rs  server.rs
