[package]
name = "scpi-server"
version = "1.2.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
redpitaya = "0.31"
thiserror = "1.0"

[features]
default = []
mock = ["redpitaya/mock"]

[badges]
travis-ci = { repository = "yellow-pitaya/scpi-servere" }
