[package]
name = "scpi-server"
version = "1.2.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"

[dependencies]
log = "0.4"
redpitaya = "0.31"
thiserror = "2.0"

[dependencies.envir]
version = "1.0"
default-features = false
features = ["logger"]

[features]
default = []
mock = ["redpitaya/mock"]
